--- a/root/test.htm
+++ b/root/test.htm
@@ -3,40 +3,7 @@
 <head>
 	<title></title>
 </head>
-<body>
-
-	<a href="javascript:" onclick="moveLeft()"> move left!</a>
-	<a href="javascript:" onclick="moveRight()"> move right!</a>
-	<a href="javascript:" onclick="rotateLeft()"> rotate left!</a>
-	<a href="javascript:" onclick="rotateRight()"> rotate right!</a>
-
-	<script type="text/javascript" src="game/controller.js"></script>
-
-	<script type="text/javascript">
-
-		var cn = new Controller();
-
-		function moveLeft() { cn.fireMoveLeft(); }
-		function moveRight() { cn.fireMoveRight(); }
-		function rotateLeft() { cn.fireRotateLeft(); }
-		function rotateRight() { cn.fireRotateRight(); }
-
-		cn.addOnMoveLeftListener(function () {
-			console.log("moved left")
-		});
-
-		cn.addOnMoveRightListener(function () {
-			console.log("moved right")
-		});
-
-		cn.addOnRotateLeftListener(function () {
-			console.log("rotated left")
-		});
-
-		cn.addOnRotateRightListener(function () {
-			console.log("rotated right")
-		});
-
-</script>
+<body>   
+    <script data-main="main.js" src="require.js"></script>
 </body>
 </html>
