--- a/root/test.htm
+++ b/root/test.htm
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+        <style type="text/css">
+        td {
+            width: 15px;
+            height: 15px;
+        }
+    </style>
+    
 	<title></title>
 </head>
-<body>   
+<body>
+    <div id="tetris">
+        
+    </div>
     <script data-main="main.js" src="require.js"></script>
 </body>
 </html>
